# tintanum

./: Cargo.toml  Makefile  README.md  color-scheme-preference-hook.service
examples/dtintanum/: main.rs  tintanum.service
src/: color_scheme.rs  lib.rs  main.rs  scheme_preference.rs  settings_proxy.rs  write_config.rs
