[package]
name = "tintanum"
version = "0.1.0"
edition = "2021"

description = "Obtain the system color scheme preference"
repository = "https://github.com/d2weber/tintanum"
keywords = ["Color", "Theme", "Freedesktop", "D-Bus"]
license = "MIT"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "1.13.0"
serde = { version = "1.0.183", optional = true, features = ["derive"] }
zbus = "3.14.1"

[dev-dependencies]
async-fs = "1.6.0"
smol = "1.3.0"
xdg = "2.5.2"
