[package]
name = "tintanum"
version = "0.3.0"
edition = "2021"

description = "Obtain the system color scheme preference"
repository = "https://github.com/d2weber/tintanum"
keywords = ["Color", "Theme", "Freedesktop", "D-Bus"]
license = "MIT"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "2.5.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
zbus = "5.1.1"

[dev-dependencies]
async-fs = "2.1.2"
smol = "2.0.2"
xdg = "2.5.2"
